[metadata]
name = dem2basin
version = 0.2.2
author = Daniel Hardesty Lewis
author_email = dhl@tacc.utexas.edu
description = Tools to derive HUC-cropped DEMs from common DEM datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dhardestylewis/DEM2basin
project_urls =
    Code = https://github.com/dhardestylewis/DEM2basin
    Bug Tracker = https://github.com/dhardestylewis/DEM2basin/issues
    Issues = https://github.com/dhardestylewis/DEM2basin/issues
license = GPL-3.0-or-later
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS

[options]
package_dir =
    =dem2basin
packages = find:
install_requires =
    utm
    tblib
    descartes
    fiona
    numpy
    matplotlib
    scipy
    memory_profiles
    geopandas
    pandas
    rasterio
    pyproj
    contextily
    xlrd
    openpyxl
    rio-tiler
    terracotta
    pandas
python_requires = >=3.6

[options.packages.find]
where = src
